Box.mainChain flag.
