# src/main/scala/org/ergoplatform/explorer/db/models/ExtendedOutput.scala
@@ -1,0 +1,3 @@
+package org.ergoplatform.explorer.db.models
+
+final case class ExtendedOutput(output: Output, spentTxId: Option[String], mainChain: Boolean)
